Arreglo del bug del scrollbar

--- a/src/styles/BenCon.css
+++ b/src/styles/BenCon.css
@@ -93,14 +93,13 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
-  width: 1200px;
+  width: 80%;
   height: 223px;
-  gap: 5%;
-  padding: 3% 10% 12% 10%;
+  gap: 1%;
+  padding-bottom: 10%;
 }
 
 #image-hover-container {
-  perspective: 1000px;
   width: 100%;
   height: 100%;
   display: flex;
@@ -116,8 +115,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100%;
-  height: 100%;
+  width: 80%;
+  height: 80%;
 }
 
 #flip-card:hover {
